--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ stream.on('end', function () {
     </code></pre>
   </div>
   <div>
-    Streams can end with either <em>'close', 'error', 'finish', and/or 'end'</em>
+    Streams can end with either <em>'close'</em>, <em>'error'</em>, <em>'finish'</em>, and/or <em>'end'</em>
   </div>
   <div>
     <pre><code>
